src/objects/CountrySetting__c.object
<CustomObject>
    <description>Records containing country specified settings (e.g. country specific SLAs)</description>
    <fields>
        <fullName>Acceptable_Values__c</fullName>
        <inlineHelpText>Acceptable values of the fields defined. Format: Field1:Value1,Value2,Value3;Field2:Value1,Value2,Value3.</inlineHelpText>
        <label>Acceptable Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CustomMilestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>WorkOrderType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Cups</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Rinse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalOffset__c</fullName>
        <description>Number of offset days to be added to calculate the requested delivery date.</description>
        <label>AdditionalOffset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Offset_Time__c</fullName>
        <label>Additional Offset Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>AssetResponseProfile__c</fullName>
        <description>None - no Response Time in Physical Asset   
No Contract - Inactive Contract or no Physical Asset
N/A - Not Applicable</description>
        <label>Asset Response Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>No Contract</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>EOD1</fullName>
                </value>
                <value>
                    <fullName>EOD2</fullName>
                </value>
                <value>
                    <fullName>EOD3</fullName>
                </value>
                <value>
                    <fullName>EOD4</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>144</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <label>Bucket</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Operating_Bucket</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Country_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Routesales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseSubtype__c</fullName>
        <label>Case Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Bouncer</fullName>
                </value>
                <value>
                    <fullName>Breakdown</fullName>
                </value>
                <value>
                    <fullName>CMD request</fullName>
                </value>
                <value>
                    <fullName>Contract change</fullName>
                </value>
                <value>
                    <fullName>Counters</fullName>
                </value>
                <value>
                    <fullName>Data observation</fullName>
                </value>
                <value>
                    <fullName>E-invoicing request</fullName>
                </value>
                <value>
                    <fullName>Generic question</fullName>
                </value>
                <value>
                    <fullName>Indexation</fullName>
                </value>
                <value>
                    <fullName>Movement</fullName>
                </value>
                <value>
                    <fullName>PO number request</fullName>
                </value>
                <value>
                    <fullName>Signed contract</fullName>
                </value>
                <value>
                    <fullName>Standard quotation</fullName>
                </value>
                <value>
                    <fullName>Standard report</fullName>
                </value>
                <value>
                    <fullName>Tailor made contract</fullName>
                </value>
                <value>
                    <fullName>Tailor made quotation</fullName>
                </value>
                <value>
                    <fullName>Field Service Tips</fullName>
                </value>
                <value>
                    <fullName>To be categorized</fullName>
                </value>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Customer Master Data</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Install equipment</fullName>
                </value>
                <value>
                    <fullName>Operating</fullName>
                </value>
                <value>
                    <fullName>Sell equipment</fullName>
                </value>
                <value>
                    <fullName>Technical Service (Internal)</fullName>
                </value>
                <value>
                    <fullName>Technical Service</fullName>
                </value>
                <value>
                    <fullName>Corrective Maintenance (S10)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Complaint</fullName>
                </value>
                <value>
                    <fullName>Field Service</fullName>
                </value>
                <value>
                    <fullName>Qualify Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Journey_Trigger_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_is_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Coffee is Running?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <label>Company Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Fields_Values__c</fullName>
        <inlineHelpText>Indicate the fields required based on a value of a certain field. Fields should be present in the required/optional fields. Format:Field1[Value1]:RequiredField1,RequiredField2;:Field2[Value2]:RequiredField1,RequiredField2.</inlineHelpText>
        <label>Conditional Fields Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country for which this record is applicable</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SAP_0333</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>SAP_0975</fullName>
                    <label>Denmark</label>
                </value>
                <value>
                    <fullName>SAP_6706</fullName>
                    <label>France</label>
                </value>
                <value>
                    <fullName>SAP_6864</fullName>
                    <label>Norway</label>
                </value>
                <value>
                    <fullName>SAP_0976</fullName>
                    <label>Sweden</label>
                </value>
                <value>
                    <fullName>SAP_0080</fullName>
                    <label>Spain</label>
                </value>
                <value>
                    <fullName>SAP_6709</fullName>
                    <label>Ireland</label>
                </value>
                <value>
                    <fullName>SAP_6712</fullName>
                    <label>Germany</label>
                </value>
                <value>
                    <fullName>SAP_6750</fullName>
                    <label>Great Britain</label>
                </value>
                <value>
                    <fullName>SAP_0111</fullName>
                    <label>Netherlands</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerScheduleDateOffset__c</fullName>
        <label>Customer Schedule Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultEndTime__c</fullName>
        <defaultValue>17</defaultValue>
        <description>Define default end time (hour) to plan operating task (fill between 1 - 24)</description>
        <inlineHelpText>Define default end time (hour) to plan operating task (fill between 1 - 24)</inlineHelpText>
        <label>DefaultEndTime</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DefaultStartTime__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Define default start time (hour) to plan operating task (fill between 1 - 24)</description>
        <inlineHelpText>Define default start time (hour) to plan operating task (fill between 1 - 24)</inlineHelpText>
        <label>DefaultStartTime</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Internal_Order_SAP__c</fullName>
        <label>Default Internal Order SAP</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Owner__c</fullName>
        <label>Default Owner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_WTS_Interval__c</fullName>
        <label>Default WTS Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_template__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeliveryOffset__c</fullName>
        <label>Delivery Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EndofBusinessDay__c</fullName>
        <label>End of Business Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_EndBusinessHours</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FireFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fire Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FridayException__c</fullName>
        <label>Friday</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_CalendarExceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Please indicate the month of the year you want to push the creation of jobs for.</description>
        <label>From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound_email__c</fullName>
        <label>Inbound email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsLabour__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Labour</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Journey_Trigger_SubType__c</fullName>
        <label>Journey Trigger SubType</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Journey_Trigger_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>TS_Journey_Trigger_SubType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Journey_Trigger_Type__c</fullName>
        <label>Journey Trigger Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Journey_Trigger_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LSPScheduleDateOffset__c</fullName>
        <label>LSP Schedule Date Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LSPScheduleTimeOffset__c</fullName>
        <inlineHelpText>Determine the hour in the 24 hour clock.</inlineHelpText>
        <label>LSP Schedule Time Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Visits_Treshhold__c</fullName>
        <inlineHelpText>When the number of  Case with Subtype Corrective Maintenance  (S10) for the same Asset  will reach this number it indicates a need for a technical Specialist.</inlineHelpText>
        <label>Visits Treshhold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum__c</fullName>
        <inlineHelpText>in minutes</inlineHelpText>
        <label>Maximum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mean_Time_To_Operate__c</fullName>
        <label>Mean Time To Operate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge_WTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge WTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum__c</fullName>
        <inlineHelpText>in minutes</inlineHelpText>
        <label>Minimum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Profile_Template__c</fullName>
        <label>Mobile Profile Template</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MondayException__c</fullName>
        <label>Monday</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_CalendarExceptions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextScheduledDate__c</fullName>
        <label>Next Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberDayToLookup__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of days to lookup (in day), is used for Operating Batch to build a map/list to describe if the last or future days have non business day</description>
        <label>NumberDayToLookup</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_SLA_day__c</fullName>
        <description>Number of SLA days for Counter Reading Task</description>
        <inlineHelpText>Number of SLA days for Counter Reading Task</inlineHelpText>
        <label>Due Day on the Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tasks__c</fullName>
        <label>Number of Tasks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofCharacters__c</fullName>
        <label>Number of Characters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional_Fields__c</fullName>
        <inlineHelpText>List of API of all optional fields as header/columns of the CSV file. This list should be comma-separated no spaces in between values/elements.</inlineHelpText>
        <label>Optional Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderType__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>De-Installation</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Movement</fullName>
                </value>
                <value>
                    <fullName>Swap</fullName>
                </value>
                <value>
                    <fullName>Trial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <inlineHelpText>Regular means that case origin is Phone, Manual, Email, Web or Disaster recovery.</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_Journey_Trigger_Origin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POType__c</fullName>
        <label>PO Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickupOffset__c</fullName>
        <label>Pick-up Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreventiveMainTriggerThreshold__c</fullName>
        <description>[KTS-392]: Contract Triggered Cases (Preventive Maintenance) - Field which indicates the days before a job can be scheduled for Preventive Maintenance jobs</description>
        <label>Preventive Maintenance Trigger Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PriceBook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked pricebook to match against the Case, or Work Order&apos;s Pricebook to fetch the right price of the product linked in the same record.</description>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Country Settings</relationshipLabel>
        <relationshipName>Country_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Linked product that should be used</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Country Settings</relationshipLabel>
        <relationshipName>Country_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PurchComp__c</fullName>
        <label>Purchase Company</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchGrp__c</fullName>
        <label>Purchase Group</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchOrg__c</fullName>
        <label>Purchase Organization</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Fields__c</fullName>
        <inlineHelpText>List of API of all required fields as header/columns of the CSV file. This list should be comma-separated and no spaces in between values/elements.</inlineHelpText>
        <label>Required Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponseProfile__c</fullName>
        <label>Response Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>144</fullName>
                </value>
                <value>
                    <fullName>EOD1</fullName>
                </value>
                <value>
                    <fullName>EOD2</fullName>
                </value>
                <value>
                    <fullName>EOD3</fullName>
                </value>
                <value>
                    <fullName>EOD4</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoundTrip__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Round Trip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RouteSalesThreshold__c</fullName>
        <description>[KTS-1281]: Field which will be used as formula for determining the route sales work order creation</description>
        <label>Route Sales Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S41_Threshold__c</fullName>
        <label>S41 Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAinHours__c</fullName>
        <label>SLA (in hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScheduledDate__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sending_Method__c</fullName>
        <label>Sending Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send via MC</fullName>
                </value>
                <value>
                    <fullName>Send via Salesforce Platform</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignatureClosing__c</fullName>
        <label>Signature Closing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SignatureCountryWebAddress__c</fullName>
        <label>Country Web Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SignatureDepartmentEmail__c</fullName>
        <label>Department Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SignatureDepartmentPhone__c</fullName>
        <label>Department Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SignatureLegalEntity__c</fullName>
        <label>Legal Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Title__c</fullName>
        <description>This field will be used to define the characters of the signature title.</description>
        <inlineHelpText>Please provide your signature title (e.g. Customer Care).</inlineHelpText>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartofBusinessDay__c</fullName>
        <label>Start of Business Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_StartBusinessHours</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supported_Operating_Types_for_S32__c</fullName>
        <inlineHelpText>Operating types that would prevent S32 creation from the batch.</inlineHelpText>
        <label>Excluded Machine Care Types for S32</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_MachineCare</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TS_SurveyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey</referenceTo>
        <relationshipLabel>Country Settings</relationshipLabel>
        <relationshipName>Country_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Number__c</fullName>
        <label>Task #</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Number_of_Tasks__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Cup</fullName>
                </value>
                <value>
                    <fullName>Rinse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Template_Unique_Name__c</fullName>
        <label>Template Unique Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>